--- a/templates/datarobot-autoscale-template.yaml
+++ b/templates/datarobot-autoscale-template.yaml
@@ -44,7 +44,7 @@ Resources:
         SecurityGroupIds: 
           - !Ref EC2SecurityGroup
         IamInstanceProfile:
-          Name: !Ref IamArn
+          Arn: !Ref IamArn
         KeyName: !Ref KeyPairName
 
 
@@ -63,12 +63,6 @@ Resources:
         Version: !GetAtt
           - ModelLaunchTemplate
           - LatestVersionNumber
-    CreationPolicy:
-      ResourceSignal:
-        Count: 1
-        Timeout: PT60M
-      AutoScalingCreationPolicy:
-        MinSuccessfulInstancesPercent: 100
 
   WorkerScaleOutPolicy:
     Type: 'AWS::AutoScaling::ScalingPolicy'
@@ -92,6 +86,7 @@ Resources:
       EvaluationPeriods: 2
       Namespace: 'DataRobot/AutoScaling/Testing'
       MetricName: 'ClusterUtilization'
+      Statistic: Average
       Threshold: 2
       ComparisonOperator: GreaterThanThreshold
       AlarmActions:
@@ -109,6 +104,7 @@ Resources:
       Namespace: 'DataRobot/AutoScaling/Testing'
       MetricName: 'ClusterUtilization'
       Threshold: 0.5
+      Statistic: Average
       ComparisonOperator: LessThanThreshold
       AlarmActions:
         - !Ref WorkerScaleInPolicy
